CREATE TABLE "books" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar(255) NOT NULL,
  "isbn" varchar(17) UNIQUE NOT NULL,
  "publication_year" smallint,
  CONSTRAINT "chk_pub_year" CHECK (publication_year BETWEEN 1000 AND 2100)
);

CREATE TABLE "book_ganre" (
  "book_id" int NOT NULL,
  "ganre_id" int NOT NULL,
  PRIMARY KEY ("book_id", "ganre_id")
);

CREATE TABLE "ganre" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "Name" varchar(255) NOT NULL
);

CREATE TABLE "authors" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50) NOT NULL
);

CREATE TABLE "book_authors" (
  "book_id" int,
  "author_id" int,
  PRIMARY KEY ("book_id", "author_id")
);

CREATE TABLE "categories" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(40) UNIQUE NOT NULL
);

CREATE TABLE "book_categories" (
  "book_id" int,
  "category_id" int,
  PRIMARY KEY ("book_id", "category_id")
);

CREATE TABLE "members" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50) NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL,
  "login" varchar(100) UNIQUE NOT NULL,
  "password_hash" varchar(128) NOT NULL,
  "phone" varchar(20) NOT NULL,
  "address" varchar(150) NOT NULL
);

CREATE TABLE "copy_statuses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(15) UNIQUE NOT NULL
);

CREATE TABLE "book_copies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "book_id" int NOT NULL,
  "barcode" varchar(30) UNIQUE NOT NULL,
  "copy_status_id" int NOT NULL
);

CREATE TABLE "borrowing_statuses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(15) UNIQUE NOT NULL
);

CREATE TABLE "borrowings" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" int NOT NULL,
  "borrowing_date" timestamp NOT NULL DEFAULT 'now()',
  "due_date" timestamp NOT NULL,
  "return_date" timestamp,
  "status_id" int NOT NULL,
  CONSTRAINT "chk_due_after_borrow" CHECK (due_date > borrowing_date),
  CONSTRAINT "chk_return_after_borrow" CHECK (return_date IS NULL OR return_date >= borrowing_date)
);

CREATE TABLE "borrowing_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "borrowing_id" int NOT NULL,
  "book_copy_id" int NOT NULL
);

CREATE TABLE "reservation_statuses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(15) UNIQUE NOT NULL
);

CREATE TABLE "reservations" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" int NOT NULL,
  "reservation_date" timestamp NOT NULL DEFAULT 'now()',
  "status_id" int NOT NULL
);

CREATE TABLE "reservation_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "reservation_id" int NOT NULL,
  "book_id" int NOT NULL,
  "book_copy_id" int,
  "reservation_amount" int NOT NULL DEFAULT 1
);

CREATE TABLE "book_reviews" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "member_id" int NOT NULL,
  "book_id" int NOT NULL,
  "review_text" text,
  "created_at" timestamp NOT NULL DEFAULT 'now()',
  "rate" smallint NOT NULL,
  CONSTRAINT "chk_rate" CHECK (rate BETWEEN 1 AND 5)
);

CREATE UNIQUE INDEX "uq_borrowing_copy" ON "borrowing_items" ("borrowing_id", "book_copy_id");

CREATE INDEX "idx_res_items_res_book" ON "reservation_items" ("reservation_id", "book_id");

CREATE UNIQUE INDEX "uq_one_review_per_book" ON "book_reviews" ("member_id", "book_id");

ALTER TABLE "book_ganre" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_ganre" ADD FOREIGN KEY ("ganre_id") REFERENCES "ganre" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_authors" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_authors" ADD FOREIGN KEY ("author_id") REFERENCES "authors" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_categories" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_categories" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_copies" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_copies" ADD FOREIGN KEY ("copy_status_id") REFERENCES "copy_statuses" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "borrowings" ADD FOREIGN KEY ("member_id") REFERENCES "members" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "borrowings" ADD FOREIGN KEY ("status_id") REFERENCES "borrowing_statuses" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "borrowing_items" ADD FOREIGN KEY ("borrowing_id") REFERENCES "borrowings" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "borrowing_items" ADD FOREIGN KEY ("book_copy_id") REFERENCES "book_copies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reservations" ADD FOREIGN KEY ("member_id") REFERENCES "members" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reservations" ADD FOREIGN KEY ("status_id") REFERENCES "reservation_statuses" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reservation_items" ADD FOREIGN KEY ("reservation_id") REFERENCES "reservations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reservation_items" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reservation_items" ADD FOREIGN KEY ("book_copy_id") REFERENCES "book_copies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_reviews" ADD FOREIGN KEY ("member_id") REFERENCES "members" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "book_reviews" ADD FOREIGN KEY ("book_id") REFERENCES "books" ("id") DEFERRABLE INITIALLY IMMEDIATE;
